Fix accordion overflow

--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -1,3 +1,6 @@
 .accordion {
   margin-top: 3.125em;
+  height: 100%;
+  overflow-y: auto;
+  flex-basis: 50%;
 }
