--- a/src/components/RightCol/styles.scss
+++ b/src/components/RightCol/styles.scss
@@ -2,9 +2,10 @@
 @import '../../styles/mixins/breakpoints.scss';
 
 .right-col {
-  overflow-y: auto;
   flex: 1;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   @include small_desktop {
     align-self: center;
@@ -15,6 +16,7 @@
 
   &--alt {
     height: auto;
+    display: block;
   }
 
   &__header {
